--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Document</title><script defer="defer" src="main.bundle-c56f49fd3ae4454f7840.js"></script></head><body><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>yandry dev</title>
+    <link rel="icon" type="image/vnd.microsoft.icon" href="../public/assets/icons/favicon.png">
+    <script defer="defer" src="main.bundle-c56f49fd3ae4454f7840.js"></script>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
