--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>yandry dev</title>
+    <link rel="icon" type="image/vnd.microsoft.icon" href="../public/assets/icons/favicon.png">
     <link href="https://fonts.cdnfonts.com/css/pp-neue-montreal" rel="stylesheet">
 
 </head>
