--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>yandry dev</title>
-    <link rel="icon" type="image/vnd.microsoft.icon" href="../public/assets/icons/favicon.png">
+    <link rel="icon" type="image/png"  href="https://yandrydev.com/logoHeader.png">
     <script defer="defer" src="main.bundle-c56f49fd3ae4454f7840.js"></script>
   </head>
   <body>
