--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>yandry dev</title>
-    <link rel="icon" type="image/vnd.microsoft.icon" href="../public/assets/icons/favicon.png">
+    <link rel="icon" type="image/png"  href="https://yandrydev.com/logoHeader.png">
     <link href="https://fonts.cdnfonts.com/css/pp-neue-montreal" rel="stylesheet">
 
 </head>
