Subida reset css

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>yandry dev</title>
     <link rel="icon" type="image/png"  href="https://yandrydev.com/logoHeader.png">
+    <link rel="stylesheet" type="text/css" href="./normalize.css">
 </head>
 <body>
     <div id="root"></div>
