--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png"  href="https://yandrydev.com/logoHeader.png">
-    <title>YandryDev.com </title>
+    <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
+    <title>YandryDev</title>
 </head>
 <body>
     <div id="root"></div>
